--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,14 +1,14 @@
 $body: #eaeaea;
 
+$mainColor: #2e2e2e;
 $mainColor3: #2e2e2e;
-$mainColor: #414141;
 $mainColor2: #353436;
 $mainColor4: #2e2e2e;
 
 $secondaryColor: #ff4d4d;
 $secondaryColor2: #ff4f4f;
 
-$thirdColor: #6bfee6;
+$thirdColor: #83ffda;
 $thirdColor2: #aefff8;
 $thirdColor3: #d5fff7;
 
