--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -16,7 +16,7 @@
 
 #main-bar {
   // items & background of bar content
-  $background-bar-color: #adfff1;
+  $background-bar-color: #2d2d2d;
   $items-colors: $secondaryColor;
   $items-colors-over: $secondaryColor;
   
@@ -132,10 +132,18 @@
           -ms-hyphens: auto;
           hyphens: auto;
           -webkit-hyphenate-character: '⌁';
+
+          background: url('/img/noise2.png') rgba($secondaryColor, 1);
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
           
           &:hover {
-            color: $mainColor;
             cursor: pointer;
+            background: url('/img/noise1.png') rgba($thirdColor, .8);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
           }
         }
       }
@@ -164,9 +172,15 @@
           border-bottom: 2px solid $secondaryColor;
           padding: 3px 2px 0px 2px; 
 
+          background: url('/img/noise2.png') rgba($secondaryColor, 1);
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
+
           &:hover {
             cursor: pointer;
-            border: 2px solid $secondaryColor;
+            border: 2px solid $thirdColor;
+            color: $thirdColor;
           }
         }
       }
