--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -12,6 +12,7 @@ $thirdColor: #83ffda;
 $thirdColor2: #aefff8;
 $thirdColor3: #d5fff7;
 
+$gray: #aba9a9;
  
 $myWhite: #f3f3f6;
 $contentBackground: #EAEAEA;
