--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,7 +24,7 @@ body {
   font-weight: 400;
   color: rgb(9, 9, 17);
   overflow-x: hidden;
-  background-color: $secondaryColor;
+  background-color: $thirdColor;
 }
 
 a {
