--- a/src/sass/libs/_loader.scss
+++ b/src/sass/libs/_loader.scss
@@ -1,9 +1,7 @@
-@keyframes rotateTimon{
-  0% {
-    transform: rotateZ(25deg)
-  }
-  100% {
-    transform: rotateZ(-25deg)
+
+@keyframes balloon {
+  to {
+    transform: rotate(8deg)
   }
 }
 
@@ -24,7 +22,7 @@
     margin-left: -1500px;
     margin-top: -1500px;
     position: absolute;
-    background-color: $thirdColor3;
+    background-color: #d8d8d8;
   }
   
   .loader-wrapper {
@@ -37,16 +35,34 @@
 
     .loader-icon {
       position: absolute;
-      width: 38px;
-      height: 38px;
-      margin-left: -19px;
-      margin-top: -19px;
+      width: 198px;
       left: 50%;
       top: 50%;
-      transform-origin: 50%;
-      animation: 4s infinite alternate rotateTimon;
-      animation-timing-function: ease-in-out;
+      transform: translate(-50%, -50%);
 
+      .loader-hi {
+        position: absolute;
+        right: 23px;
+        top: -3px;
+        width: 20px;
+        line-height: 1.1rem;
+        font-family: 'eleb';
+        font-size: 1.1rem;
+        color: $mainColor;
+      }
+      svg {
+        #scene {
+          #towel {
+          }
+          #umbrella {}
+          #balloon {
+            #body-2 {
+              transform-origin: 78px 38px;
+              animation: balloon .5s ease-in-out infinite alternate;
+            }
+          }
+        }
+      }
     }
   }
 }
